tests/paczka1/small_fuzzy/68121308.err
Error in line 5: cbMr7eBL S63 148,11
Error in line 2: cbMr7eBL S63 56,3
